--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <h1 class="page-header-ui-title mb-3 display-6">Welcomeaaaaaaaaaa to Holiupdaaaaaaaaaaaaaateday Homes</h1>
+            <h2>MODIFICIATION DE LA PAGE QA</h2>
         </div>
     </div>
 </div>
